--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2018"
 
 [dependencies]
 clap = {version = "3.0.0-beta.4", features = ["yaml"]}
+colored = "2.0.0"
+file-lock = "1.1.20"
 regex = "1.5.4"
 serde = {version = "1.0.130", features = ["derive"]}
 serde_json = "1.0.68"
+tokio = { version = "1.12.0", features = ["full"] }
 ureq = "2.2.0"
