Feat: Cant remember what I did.

--- a/src/config.yml
+++ b/src/config.yml
@@ -22,3 +22,5 @@ subcommands:
               about: "Packages to remove"
               multiple_values: true
               required: true
+    - show:
+        about: "Shows information from your scalesfile"
